--- a/index.html
+++ b/index.html
@@ -105,13 +105,20 @@ ul {	columns: 3;
     </div>
 
     <div class="tab">
-        <button class="tablinks active" onclick="openTab(event, 'Education')" id="defaultOpen">Education</button>
+        <button class="tablinks active" onclick="openTab(event, 'AboutMe')" id="defaultOpen">About Me</button>
+        <button class="tablinks" onclick="openTab(event, 'Education')">Education</button>
         <button class="tablinks" onclick="openTab(event, 'Research')">Research</button>
         <button class="tablinks" onclick="openTab(event, 'Publications')">Publications</button>
         <button class="tablinks" onclick="openTab(event, 'Tutorials')">Tutorials</button>
         <!--<button class="tablinks" onclick="openTab(event, 'Notes')">Notes</button>-->
         <button class="tablinks" onclick="openTab(event, 'OtherInterests')">Other Interests</button>
     </div>
+
+
+    <div id="AboutMe" class="tabcontent" style="display: block;">
+			<p>Currently, I am working as a research scholar at the Indian Statistical Institute Kolkata, India under the supervision of <a href = "https://scholar.google.co.in/citations?user=SINAUTEAAAAJ&hl=en">Prof. Dibakar Ghosh</a>. I have completed my bachelor's degree (B.Sc. in Mathematics) and master's degree (M.Sc. in Mathematics) from Siksha Bhavana, Visva-Bharati, Santiniketan.</p>
+    </div>
+
 
     <div id="Education" class="tabcontent" style="display: block;">
         <h2> <u>Academic Qualifications</u> </h2>
@@ -141,6 +148,7 @@ ul {	columns: 3;
 <ul>
 <li>Mathematical Reviews</li>
 <li>Physical Review E</li>
+<li>Communications Physics</li>
 <li>Journal of Physics: Complexity</li>
 <li>Chaos</li>
 <li>Nonlinear Dynamics</li>
@@ -152,28 +160,29 @@ ul {	columns: 3;
 
 <h2><u>List of Journal Publications</u></h2>
 	<ol reversed>
-<li>D. Ghosh, M. Frasca, A. Rizzo, S. Majhi, <strong>Sarbendu Rakshit</strong>, K. A. Bittner, & S. Boccaletti, “The synchronized dynamics of time-varying networks”, Physics Reports <strong>Accepted</strong> (2021).</li>
-<li><strong>Sarbendu Rakshit</strong>, F. Parastesh, S. N. Chowdhury, S. Jafari, J. Kurths, & D. Ghosh, “Relay interlayer synchronization: Invariance and stability conditions”, <a href = "https://iopscience.iop.org/article/10.1088/1361-6544/ac3c2f">Nonlinearity</a> <strong>35</strong>, 681-718 (2022).</li>
-<li><strong>Sarbendu Rakshit</strong>, S. Majhi, J. Kurths, & D. Ghosh, “Neuronal synchronization in long-ranged time-varying networks”, Chaos <strong>31</strong>, 073129 (2021).</li>
-<li>N. Frolov, <strong>Sarbendu Rakshit</strong>, V. Maksimenko, D. Kirsanov, D. Ghosh, & A. Hramov, “Coexistence of interdependence and competition in adaptive multilayer network”, Chaos, Solitons and Fractals <strong>147</strong>, 110955 (2021).</li>
-<li>S. N. Chowdhury, <strong>Sarbendu Rakshit</strong>, J. M. Buldú, D. Ghosh, & C. Hens, “Antiphase synchronization in multiplex networks with attractive and repulsive interactions”, Physical Review E <strong>103</strong>, 032310 (2021).</li>
-<li><strong>Sarbendu Rakshit</strong>, & D. Ghosh, “Generalized synchronization on the onset of auxiliary system approach”, Chaos <strong>30</strong>, 111102 (2020).</li>
-<li>N. Frolov, V. Maksimenko, S. Majhi, <strong>Sarbendu Rakshit</strong>, D. Ghosh, & A. Hramov, “Chimera-like behavior in a heterogeneous Kuramoto model: the interplay between the attractive and repulsive coupling”, Chaos <strong>30</strong>, 081102 (2020).</li>
-<li>A. Ray, <strong>Sarbendu Rakshit</strong>, G. K. Basak, S. K. Dana, & D. Ghosh, “Understanding the origin of extreme events in El Niño southern oscillation”, Physical Review E <strong>101</strong>, 062210 (2020).</li>
-<li><strong>Sarbendu Rakshit</strong>, S. Majhi, & D. Ghosh, “Synchronization in complex networks with long-range interactions”, Journal of Physics A: Mathematical and Theoretical <strong>53</strong>, 154002 (2020).</li>
-<li><strong>Sarbendu Rakshit</strong>, B. K. Bera, E. M. Bollt, & D. Ghosh, “Intralayer synchronization in evolving multiplex hypernetworks: Analytical approach”, SIAM Journal on Applied Dynamical Systems <strong>19</strong>, 918-963 (2020).</li>
-<li><strong>Sarbendu Rakshit</strong>, B. K. Bera, & D. Ghosh, “Invariance and stability conditions of interlayer synchronization manifold”, Physical Review E <strong>101</strong>, 012308 (2020).</li>
-<li><strong>Sarbendu Rakshit</strong>, B. K. Bera, J. Kurths, & D. Ghosh, “Enhancing synchrony in multiplex network due to rewiring frequency”, Proceedings of the Royal Society A <strong>475</strong>, 20190460 (2019).</li>
-<li>B. K. Bera, <strong>Sarbendu Rakshit</strong>, & D. Ghosh, “Intralayer synchronization in neuronal multiplex network”, European Physical Journal Special Topics <strong>228</strong>, 2441-2454 (2019).</li>
-<li><strong>Sarbendu Rakshit</strong>, Z. Faghani, F. Parastesh, S. Panahi, S. Jafari, D. Ghosh, & M. Perc, “Transitions from chimeras to coherence: An analytical approach by means of the coherent stability function”, Physical Review E <strong>100</strong>, 012315 (2019).</li>
-<li>B. K. Bera, <strong>Sarbendu Rakshit</strong>, D. Ghosh, & J. Kurths, “Spike chimera states and firing regularities in neuronal hypernetworks”, Chaos <strong>29</strong>, 053115 (2019).</li>
-<li>A. Ray, <strong>Sarbendu Rakshit</strong>, D. Ghosh, & S. K. Dana, “Intermittent large deviation of chaotic trajectory in Ikeda map: Signature of extreme events”, Chaos <strong>29</strong>, 043131 (2019).</li>
-<li><strong>Sarbendu Rakshit</strong>, B. K. Bera, & D. Ghosh, “Synchronization in temporal multiplex neuronal hypernetwork”, Physical Review E <strong>98</strong>, 032305 (2018).</li>
-<li><strong>Sarbendu Rakshit</strong>, A. Ray, B. K. Bera, & D. Ghosh, “Synchronization and firing patterns of coupled Rulkov neuronal map”, Nonlinear Dynamics <strong>94</strong>, 785 (2018).</li>
-<li><strong>Sarbendu Rakshit</strong>, B. K. Bera, D. Ghosh, & S. Sinha, “Emergence of synchronization and regularity in firing patterns in time-varying neural hypernetworks”, Physical Review E <strong>97</strong>, 052304 (2018).</li>
-<li><strong>Sarbendu Rakshit</strong>, S. Majhi, B. K. Bera, S. Sinha, & D. Ghosh, “Time-varying multiplex network: Intralayer and interlayer synchronization”, <a href = "https://journals.aps.org/pre/abstract/10.1103/PhysRevE.96.062308">Physical Review E</a> <strong>96</strong>, 062308 (2017).</li>
-<li><strong>Sarbendu Rakshit</strong>, B. K. Bera, M. Perc, & D. Ghosh, “Basin stability for chimera states”, <a href = "https://www.nature.com/articles/s41598-017-02409-5">Scientific Reports</a> <strong>7</strong>, 2412 (2017).</li>
-<li><strong>Sarbendu Rakshit</strong>, B. K. Bera, S. Majhi, C. Hens & D. Ghosh, “Basin stability measure of different steady states in coupled oscillators”, <a href = "https://www.nature.com/articles/srep45909">Scientific Reports</a> <strong>7</strong>, 45909 (2017).</li>
+<li>D. Ghosh, M. Frasca, A. Rizzo, S. Majhi, <strong>Sarbendu Rakshit</strong>, K. A. Bittner, & S. Boccaletti, “<a href = "https://www.sciencedirect.com/science/article/abs/pii/S0370157321004166?via%3Dihub">The synchronized dynamics of time-varying networks</a>”, <strong>Physics Reports</strong> 949, 1-63 (2022).</li>
+<li><strong>Sarbendu Rakshit</strong>, F. Parastesh, S. N. Chowdhury, S. Jafari, J. Kurths, & D. Ghosh, “<a href = "https://iopscience.iop.org/article/10.1088/1361-6544/ac3c2f">Relay interlayer synchronization: Invariance and stability conditions</a>”, <strong>Nonlinearity</strong> 35, 681-718 (2022).</li>
+<li><strong>Sarbendu Rakshit</strong>, S. Majhi, J. Kurths, & D. Ghosh, “<a href = "https://aip.scitation.org/doi/10.1063/5.0057276">Neuronal synchronization in long-ranged time-varying networks</a>”, <strong>Chaos</strong> 31, 073129 (2021).</li>
+
+<li>N. Frolov, <strong>Sarbendu Rakshit</strong>, V. Maksimenko, D. Kirsanov, D. Ghosh, & A. Hramov, “<a href = "https://www.sciencedirect.com/science/article/pii/S096007792100309X">Coexistence of interdependence and competition in adaptive multilayer network</a>”, <strong>Chaos, Solitons and Fractals</strong> 147, 110955 (2021).</li>
+<li>S. N. Chowdhury, <strong>Sarbendu Rakshit</strong>, J. M. Buldú, D. Ghosh, & C. Hens, “<a href = "https://journals.aps.org/pre/abstract/10.1103/PhysRevE.103.032310">Antiphase synchronization in multiplex networks with attractive and repulsive interactions</a>”, <strong>Physical Review E</strong> 103, 032310 (2021).</li>
+<li><strong>Sarbendu Rakshit</strong>, & D. Ghosh, “<a href = "https://aip.scitation.org/doi/10.1063/5.0030772">Generalized synchronization on the onset of auxiliary system approach</a>”, <strong>Chaos</strong> 30, 111102 (2020).</li>
+<li>N. Frolov, V. Maksimenko, S. Majhi, <strong>Sarbendu Rakshit</strong>, D. Ghosh, & A. Hramov, “<a href = "https://aip.scitation.org/doi/10.1063/5.0019200">Chimera-like behavior in a heterogeneous Kuramoto model: the interplay between the attractive and repulsive coupling</a>”, <strong>Chaos</strong> 30, 081102 (2020).</li>
+<li>A. Ray, <strong>Sarbendu Rakshit</strong>, G. K. Basak, S. K. Dana, & D. Ghosh, “<a href = "https://journals.aps.org/pre/abstract/10.1103/PhysRevE.101.062210">Understanding the origin of extreme events in El Niño southern oscillation</a>”, <strong>Physical Review E</strong> 101, 062210 (2020).</li>
+<li><strong>Sarbendu Rakshit</strong>, S. Majhi, & D. Ghosh, “<a href = "https://iopscience.iop.org/article/10.1088/1751-8121/ab78cc">Synchronization in complex networks with long-range interactions</a>”, <strong>Journal of Physics A: Mathematical and Theoretical</strong> 53, 154002 (2020).</li>
+<li><strong>Sarbendu Rakshit</strong>, B. K. Bera, E. M. Bollt, & D. Ghosh, “<a href = "https://epubs.siam.org/doi/10.1137/18M1224441">Intralayer synchronization in evolving multiplex hypernetworks: Analytical approach</a>”, <strong>SIAM Journal on Applied Dynamical Systems</strong> 19, 918-963 (2020).</li>
+<li><strong>Sarbendu Rakshit</strong>, B. K. Bera, & D. Ghosh, “<a href = "https://journals.aps.org/pre/abstract/10.1103/PhysRevE.101.012308">Invariance and stability conditions of interlayer synchronization manifold</a>”, <strong>Physical Review E</strong> 101, 012308 (2020).</li>
+<li><strong>Sarbendu Rakshit</strong>, B. K. Bera, J. Kurths, & D. Ghosh, “<a href = "https://royalsocietypublishing.org/doi/10.1098/rspa.2019.0460">Enhancing synchrony in multiplex network due to rewiring frequency</a>”, <strong>Proceedings of the Royal Society A</strong> 475, 20190460 (2019).</li>
+<li>B. K. Bera, <strong>Sarbendu Rakshit</strong>, & D. Ghosh, “<a href = "https://link.springer.com/article/10.1140%2Fepjst%2Fe2019-900007-8">Intralayer synchronization in neuronal multiplex network</a>”, <strong>European Physical Journal Special Topics</strong> 228, 2441-2454 (2019).</li>
+<li><strong>Sarbendu Rakshit</strong>, Z. Faghani, F. Parastesh, S. Panahi, S. Jafari, D. Ghosh, & M. Perc, “<a href = "https://journals.aps.org/pre/abstract/10.1103/PhysRevE.100.012315">Transitions from chimeras to coherence: An analytical approach by means of the coherent stability function</a>”, <strong>Physical Review E</strong> 100, 012315 (2019).</li>
+<li>B. K. Bera, <strong>Sarbendu Rakshit</strong>, D. Ghosh, & J. Kurths, “<a href = "https://aip.scitation.org/doi/10.1063/1.5088833">Spike chimera states and firing regularities in neuronal hypernetworks</a>”, <strong>Chaos</strong> 29, 053115 (2019).</li>
+<li>A. Ray, <strong>Sarbendu Rakshit</strong>, D. Ghosh, & S. K. Dana, “<a href = "https://aip.scitation.org/doi/10.1063/1.5092741">Intermittent large deviation of chaotic trajectory in Ikeda map: Signature of extreme events</a>”, <strong>Chaos</strong> 29, 043131 (2019).</li>
+<li><strong>Sarbendu Rakshit</strong>, B. K. Bera, & D. Ghosh, “<a href = "https://journals.aps.org/pre/abstract/10.1103/PhysRevE.98.032305">Synchronization in temporal multiplex neuronal hypernetwork</a>”, <strong>Physical Review E</strong> 98, 032305 (2018).</li>
+<li><strong>Sarbendu Rakshit</strong>, A. Ray, B. K. Bera, & D. Ghosh, “<a href = "https://link.springer.com/article/10.1007/s11071-018-4394-8">Synchronization and firing patterns of coupled Rulkov neuronal map</a>”, <strong>Nonlinear Dynamics</strong> 94, 785 (2018).</li>
+<li><strong>Sarbendu Rakshit</strong>, B. K. Bera, D. Ghosh, & S. Sinha, “<a href = "https://journals.aps.org/pre/abstract/10.1103/PhysRevE.97.052304">Emergence of synchronization and regularity in firing patterns in time-varying neural hypernetworks</a>”, <strong>Physical Review E</strong> 97, 052304 (2018).</li>
+<li><strong>Sarbendu Rakshit</strong>, S. Majhi, B. K. Bera, S. Sinha, & D. Ghosh, “<a href = "https://journals.aps.org/pre/abstract/10.1103/PhysRevE.96.062308">Time-varying multiplex network: Intralayer and interlayer synchronization</a>”, <strong>Physical Review E</strong> 96, 062308 (2017).</li>
+<li><strong>Sarbendu Rakshit</strong>, B. K. Bera, M. Perc, & D. Ghosh, “<a href = "https://www.nature.com/articles/s41598-017-02409-5">Basin stability for chimera states</a>”, <strong>Scientific Reports</strong> 7, 2412 (2017).</li>
+<li><strong>Sarbendu Rakshit</strong>, B. K. Bera, S. Majhi, C. Hens & D. Ghosh, “<a href = "https://www.nature.com/articles/srep45909">Basin stability measure of different steady states in coupled oscillators</a>”, <strong>Scientific Reports</strong> 7, 45909 (2017).</li>
   </ol>
 
 
@@ -181,12 +190,12 @@ ul {	columns: 3;
 
 <h2><u>List of Conference Publications</u></h2>
 <ol reversed>
-<li>N. Frolov, V. Maksimenko, D. Ghosh, S. Majhi, & <strong>Sarbendu Rakshit</strong>, “Route to Coherence in a Frequency-Heterogeneous Kuramoto Network”, <strong>IEEE</strong> (2020) DOI: <a href = "https://ieeexplore.ieee.org/document/9216818">10.1109/DC-NAIR50402.2020.9216818</a>.</li>
+<li>N. Frolov, V. Maksimenko, D. Ghosh, S. Majhi, & <strong>Sarbendu Rakshit</strong>, “<a href = "https://ieeexplore.ieee.org/document/9216818">Route to Coherence in a Frequency-Heterogeneous Kuramoto Network</a>”, 2020 4th Scientific School on Dynamics of Complex Networks and their Application in Intellectual Robotics, <strong>IEEE</strong> (2020).</li>
 </ol>
     </div>
 
     <div id="Tutorials" class="tabcontent" style="display: none;">
-        <h2> Tutorials </h2>
+        <h3> Tutorials </h3>
     </div>
 
 
@@ -227,8 +236,7 @@ ul {	columns: 3;
 
 
 
-
-<!-- a href='https://thesiswritingservice.net/'>professional Writing Service</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=1d64a9c31803094787b4e0202379e085c7effb16'></script> <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/893129/t/2"></script>
+<!--a href='https://thesiswritingservice.net/'>professional Writing Service</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=1d64a9c31803094787b4e0202379e085c7effb16'></script> <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/893129/t/2"></script>
 
 </body>
 </html>
