--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ ul {	columns: 3;
 
     <div id="Research" class="tabcontent" style="display: none;">
 
-            <p style="font-size:large;">  I am a learner of Mathematics with a strong interest in the broad area of dynamical systems and differential equations. Currently, my research deals with emergent behaviours in networked dynamical systems with special attention to their invariance and stability analysis. </p>
+            <p style="font-size:large;">  I am a learner of Mathematics with a strong interest in the broad area of dynamical systems and differential equations. Currently, my research deals with emergent behaviors in networked dynamical systems with special attention to their invariance and stability analysis. </p>
             
 <h2><u>Refereed Articles From Journals</u></h2>
 <ul>
