--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ ul {	columns: 3;
 
 .news {
     box-shadow: inset 0 -20px 50px rgba(0,0,0,0.4), 0 20px 40px rgba(0,0,0,0.5);
-       width: 1100px;
+       width: 1000px;
     margin: 50px auto;
     align: left;
     overflow: hidden;
@@ -104,7 +104,7 @@ ul {	columns: 3;
 }
 
 .text1{ box-shadow:none !important;
-    width: 900px;	}
+    width: 828px;	}
 </style>
 
 </head>
@@ -132,13 +132,13 @@ ul {	columns: 3;
 		<a href="https://scholar.google.com/citations?hl=en&user=TPSE4JEAAAAJ&view_op=list_works&sortby=pubdate">		<img alt="Qries" src="GoogleScholar.png" width="250" height=auto>	</a> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
 		<a href="https://www.linkedin.com/in/sarbendu-rakshit-782168100/">	<img alt="Qries" src="LinkedIn.png" width="250" height=auto>	</a>	&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
 		<a href="https://www.researchgate.net/profile/Sarbendu-Rakshit-2">	<img alt="Qries" src="ResearchGate.png" width="250" height=auto>	</a>	&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-		<a href="https://github.com/Sarbendu-Rakshit">	<img alt="Qries" src="GitHub.png" width="125" height=auto>	</a>&nbsp
+		<a href="https://github.com/Sarbendu-Rakshit">	<img alt="Qries" src="GitHub.png" width="100" height=auto>	</a>&nbsp
 <!--				    <P>My research profile at <a href="https://scholar.google.com/citations?hl=en&user=TPSE4JEAAAAJ&view_op=list_works&sortby=pubdate">Google Scholar</a></P>-->
 <!--				    <P>My research profile at <a href="https://www.researchgate.net/profile/Sarbendu-Rakshit-2">ResearchGate</a></P>-->
 <!--				    <P>Connect me on <a href="https://www.linkedin.com/in/sarbendu-rakshit-782168100/">LinkedIn</a></P>-->
 <!--            <P> My <a href="https://github.com/Sarbendu-Rakshit"> GitHub </a> Profile</p>-->
 
-<div class="news blue"><span><marquee>Latest News</marquee></span><span class="text1">Researchers are invited to contribute their work to the special issue on <a href="https://www.mdpi.com/journal/mathematics/special_issues/1657ZCWY37">Dynamical Behaviors in Networked Systems: Analysis & Control</a> in the journal <i>Mathematics</i>, published by MDPI.</span></div>
+<div class="news blue"><span>Latest News</span><span class="text1">Researchers are invited to contribute their work in the journal <i>Mathematics</i>, published by MDPI to the special issue on <a href="https://www.mdpi.com/journal/mathematics/special_issues/1657ZCWY37">Dynamical Behaviors in Networked Systems: Analysis & Control</a>.</span></div>
 	</div>
 </div>
 
@@ -177,6 +177,7 @@ ul {	columns: 3;
 <td><i>Department of Mechanical Engineering, University of California at Riverside</i>, USA. Advisor: Prof. Fabio Pasqualetti</td>
 </tr>
 </tbody></table>
+
 </div>
 
 
